--- a/ABMDesktopUI/Views/SalesView.xaml
+++ b/ABMDesktopUI/Views/SalesView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ABMDesktopUI.Views.SaleView"
+﻿<UserControl x:Class="ABMDesktopUI.Views.SalesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -25,11 +25,11 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
+
         <!--Header-->
         <TextBlock Text="Sales Page" FontSize="48" Grid.Row="0" 
                    Margin="0 0 0 20"  Grid.Column="0" Grid.ColumnSpan="3"/>
-        
+
         <!--Column0-->
         <TextBlock Text="Items" Grid.Row="1" Grid.Column="0"/>
         <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0"
