--- a/ABMDesktopUI/Views/SalesView.xaml
+++ b/ABMDesktopUI/Views/SalesView.xaml
@@ -31,9 +31,9 @@
                    Margin="0 0 0 20"  Grid.Column="0" Grid.ColumnSpan="3"/>
 
         <!--Column0-->
-        <TextBlock Text="Items" Grid.Row="1" Grid.Column="0"/>
+        <TextBlock Text="Products" Grid.Row="1" Grid.Column="0"/>
         <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0"
-                 MinHeight="200" MinWidth="150">
+                 MinHeight="200" MinWidth="150" SelectedItem="{Binding SelectedProduct}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding ProductName}"/>
@@ -44,7 +44,7 @@
         <!--Column1-->
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="2" Margin="20 0">
             <TextBlock Text="Quantity"/>
-            <TextBox x:Name="ItemQuantity" MinWidth="100" Margin="0 0 0 10"/>
+            <TextBox x:Name="ProductQuantity" MinWidth="100" Margin="0 0 0 10"/>
             <Button x:Name="AddToCart" Content="Add to Cart" Margin="0 0 0 30" Padding="5"/>
             <Button x:Name="RemoveFromCart" Content="RemoveFromCart" Padding="5"/>
         </StackPanel>
@@ -53,7 +53,13 @@
         <!--Column2-->
         <TextBlock Text="Cart" Grid.Row="1" Grid.Column="2"/>
         <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2"
-                 MinHeight="150" MinWidth="100"/>
+                 MinHeight="150" MinWidth="100">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding DisplayText}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <DockPanel Grid.Row="3" Grid.Column="2">
             <TextBlock Text="SubTotal: " Margin="0 0 15 0"/>
