--- a/ABMDesktopUI/Views/SalesView.xaml
+++ b/ABMDesktopUI/Views/SalesView.xaml
@@ -65,7 +65,7 @@
         <!--Column2-->
         <TextBlock Text="Cart" Grid.Row="1" Grid.Column="2"/>
         <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2"
-                 MinHeight="150" MinWidth="100">
+                 MinHeight="150" MinWidth="100" SelectedItem="{Binding SelectedCartProduct}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding DisplayText}"/>
