--- a/ABMDesktopUI/Views/ShellView.xaml
+++ b/ABMDesktopUI/Views/ShellView.xaml
@@ -11,8 +11,8 @@
             <MenuItem Header="_File">
                 <MenuItem x:Name="ExitApplication" Header="E_xit"/>
             </MenuItem>
-            <MenuItem Header="_Account">
-                <MenuItem x:Name="LoginScreen" Header="_Login"/>
+            <MenuItem Header="_Account" Visibility="{Binding IsUserLoggedIn, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}">
+                <MenuItem x:Name="LogOut" Header="_LogOut"/>
             </MenuItem>
         </Menu>
         <Grid>
