--- a/ABMDesktopUI/Views/UserView.xaml
+++ b/ABMDesktopUI/Views/UserView.xaml
@@ -28,12 +28,12 @@
 
         <!--Header-->
         <TextBlock Text="User Administration" FontSize="48" Grid.Row="0" 
-                   Margin="0 0 0 20"  Grid.Column="0" Grid.ColumnSpan="3"/>
+                   Margin="10 0 0 20"  Grid.Column="0" Grid.ColumnSpan="3"/>
 
         <!--Column0-->
-        <TextBlock Text="Users" Grid.Row="1" Grid.Column="0"/>
-        <ListBox x:Name="Users" Grid.Row="2" Grid.Column="0"
-                 MinHeight="200" MinWidth="150">
+        <TextBlock Text="Users" Grid.Row="1" Grid.Column="0"  Margin="20 0 0 0"/>
+        <ListBox x:Name="Users" Grid.Row="2" Grid.Column="0" Margin="20 0 0 0"
+                 MinHeight="200" MinWidth="150" SelectedItem="SelectedUser">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
@@ -44,5 +44,18 @@
             </ListBox.ItemTemplate>
         </ListBox>
         
+        <!--Column1-->
+        <StackPanel Orientation="Vertical"  Grid.Row="1" Grid.Column="1" Grid.RowSpan="2"  Margin="20 0 0 0">
+            <TextBlock x:Name="SelectedUserName"/>
+            <TextBlock Text="Current Roles: " Margin="0 0 0 10"/>
+            <StackPanel Orientation="Horizontal"  Margin="0 0 0 10">
+                <ListBox x:Name="UserRoles" MinWidth="150" Margin="0 0 10 0"/>
+                <Button x:Name="RemoveSelectedRole" Content="Remove" MinWidth="100"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal"  Margin="0 0 0 10">
+                <ComboBox x:Name="AvailableRoles" MinWidth="150" Margin="0 0 10 0"/>
+                <Button x:Name="AddSelectedRole" Content="Add" MinWidth="100"></Button>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
